--- a/OSPasteBin/Web.config
+++ b/OSPasteBin/Web.config
@@ -5,11 +5,16 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-OSPasteBin-20130205111909;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-OSPasteBin-20130205111909.mdf" providerName="System.Data.SqlClient" />
+
+    <!-- PasteBin Database Connection-->
+    <add name="OSPasteBinConnection" 
+         providerName="System.Data.SqlClient" 
+         connectionString="Data Source=omarsteweydb.ctbmemmimpzo.us-east-1.rds.amazonaws.com;Initial Catalog=OSPasteBinDB;Integrated Security=False;User ID=pastebindbadmin;Password=pastebindbpassword;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False"/>
+
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
