--- a/OSPasteBin/OSPasteBin.Web.csproj
+++ b/OSPasteBin/OSPasteBin.Web.csproj
@@ -195,14 +195,17 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\PasteNote\Index.cshtml" />
-    <Content Include="Views\Shared\PasteNoteNewEditForm.cshtml" />
+    <Content Include="Views\PasteNote\Note.cshtml" />
+    <Content Include="Views\PasteNote\PasteNoteNewEditForm.cshtml" />
     <Content Include="Views\PasteNote\New.cshtml" />
+    <Content Include="Views\PasteNote\NotFound.cshtml" />
+    <Content Include="Views\PasteNote\Raw.cshtml" />
+    <Content Include="Views\PasteNote\UserNotes.cshtml" />
+    <Content Include="Views\PasteNote\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
