Application Tagging Implemented

--- a/OSPasteBin.DAL/OSPasteBin.DAL.csproj
+++ b/OSPasteBin.DAL/OSPasteBin.DAL.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DALExtensions.cs" />
     <Compile Include="PasteBinSqlDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLDAL.cs" />
