Added Tagger Plugin

--- a/OSPasteBin/OSPasteBin.Web.csproj
+++ b/OSPasteBin/OSPasteBin.Web.csproj
@@ -178,12 +178,13 @@
     <Content Include="Error\500.htm" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <None Include="Properties\PublishProfiles\a.pubxml" />
     <None Include="Properties\PublishProfiles\PasteBin.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\libs\prettify.js" />
+    <Content Include="Scripts\libs\Tagger\os.tagger.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
